basic template sync tests
figured out at least one way to:
* subscribe to a particular game
* update a field in that document from the webpage
* see changes in all connected clients

There might be cleaner ways to do this...

--- a/imports/modules/iberian_gauge/game.html
+++ b/imports/modules/iberian_gauge/game.html
@@ -5,5 +5,10 @@
 	<div>
 	<p>first: {{ hello }}</p>
 	<p>second: {{ mol }}</p>
+	<p>foo: {{ foo }}</p>
+		<div>
+			update foo: <input type="text" id="foodemo"/>
+			<button id="triggerfoo">update!</button>
+		</div>
 	</div>
 </template>
