got remote methods working and initial setup more or less working
just needs player colors

--- a/imports/modules/iberian_gauge/game.html
+++ b/imports/modules/iberian_gauge/game.html
@@ -1,5 +1,29 @@
 <template name="initialSetup">
 	<div id="iberian_gauge">
+		<h1>Setup</h1>
+		<div>Enter the names of the players. Leave blank if nobody is in that seat.</div>
+		<br/>
+		<div>
+			<form id="setupForm">
+				<div><span>Player One:</span><input value="Tom" type="text" id="player1"/></div>
+				<div><span>Player Two:</span><input value="Dick" type="text" id="player2"/></div>
+				<div><span>Player Three:</span><input type="text" id="player3"/></div>
+				<div><span>Player Four:</span><input value="Harry" type="text" id="player4"/></div>
+				<div><span>Player Five:</span><input type="text" id="player5"/></div>
+				<div>
+					<button id="startIberianGauge">Start</button>
+				</div>
+			</form>
+		</div>
+	</div>
+</template>
+
+<template name="iberian_gauge_gameplay">
+	gameplay goeth here
+</template>
+
+<template name="initialSetupOld">
+	<div id="iberian_gauge">
 	THIS IS A TEMPLATE FOR IBERIAN GAUGE!
 	</div>
 	<div>
