add player color support

--- a/imports/modules/iberian_gauge/game.html
+++ b/imports/modules/iberian_gauge/game.html
@@ -5,11 +5,11 @@
 		<br/>
 		<div>
 			<form id="setupForm">
-				<div><span>Player One:</span><input value="Tom" type="text" id="player1"/></div>
-				<div><span>Player Two:</span><input value="Dick" type="text" id="player2"/></div>
-				<div><span>Player Three:</span><input type="text" id="player3"/></div>
-				<div><span>Player Four:</span><input value="Harry" type="text" id="player4"/></div>
-				<div><span>Player Five:</span><input type="text" id="player5"/></div>
+				<div><span>Player One:</span><input value="Tom" type="text" id="player1"/><select id="color1"></select></div>
+				<div><span>Player Two:</span><input value="Dick" type="text" id="player2"/><select id="color2"></select></div>
+				<div><span>Player Three:</span><input type="text" id="player3"/><select id="color3"></select></div>
+				<div><span>Player Four:</span><input value="Harry" type="text" id="player4"/><select id="color4"></select></div>
+				<div><span>Player Five:</span><input type="text" id="player5"/><select id="color5"></select></div>
 				<div>
 					<button id="startIberianGauge">Start</button>
 				</div>
