basic end to end PoC works!
I can
-create or join a game on multiple browsers/devices
-render a game state
-build a simplified UI for player actions
-operate on that game state safely to e.g. float a railroad (by moving money between companies,
	setting share ownership, etc.)

--- a/imports/modules/iberian_gauge/game.html
+++ b/imports/modules/iberian_gauge/game.html
@@ -18,8 +18,29 @@
 	</div>
 </template>
 
-<template name="iberian_gauge_gameplay">
-	gameplay goeth here
+<template name="gameplay">
+	<div id="ibDash"></div>
+	<hr/>
+	<div id="ui">
+		<div id="ui_stock_rounds">
+			<div id="ui_sr_float">
+				<select id="float_player"></select>
+				floats
+				<select id="float_company"></select>
+				at
+				<select id="float_price">
+					<option value="12">12</option>
+					<option value="16">16</option>
+					<option value="20">20</option>
+					<option value="24">24</option>
+					<option value="28">28</option>
+					<option value="32">32</option>
+					<option value="36">36</option>
+				</select>
+				<button id="float_run">Go</button>
+			</div>
+		</div>
+	</div>
 </template>
 
 <template name="initialSetupOld">
