first pass at displaying log data
should probably relocate this to elsewhere in the core UI

--- a/imports/modules/iberian_gauge/game.html
+++ b/imports/modules/iberian_gauge/game.html
@@ -20,6 +20,9 @@
 
 <template name="gameplay">
 	<div id="ibDash"></div>
+
+	<div id="gameLog">
+	</div>
 	<hr/>
 	<div id="ui">
 		<div id="ui_stock_rounds">
@@ -39,21 +42,6 @@
 				</select>
 				<button id="float_run">Go</button>
 			</div>
-		</div>
-	</div>
-</template>
-
-<template name="initialSetupOld">
-	<div id="iberian_gauge">
-	THIS IS A TEMPLATE FOR IBERIAN GAUGE!
-	</div>
-	<div>
-	<p>first: {{ hello }}</p>
-	<p>second: {{ mol }}</p>
-	<p>foo: {{ foo }}</p>
-		<div>
-			update foo: <input type="text" id="foodemo"/>
-			<button id="triggerfoo">update!</button>
 		</div>
 	</div>
 </template>
