starting to add bottom nav bar, for eventual status display

--- a/client/ui/SiteNav.html
+++ b/client/ui/SiteNav.html
@@ -1,7 +1,14 @@
 <template name="siteTopNavBar">
-	<div class="navbar">
+	<div class="top_nav">
 		<a href="/">Conductor</a>
 		| undo | refresh | etc.
 		<span id="context_id_display">{{contextId}}</span>
+	</div>
+</template>
+
+<template name="siteBottomNavBar">
+	<div class="bottom_nav">
+		what goes here?
+		<span id="expander"><a href="">EXPAND</a></span>
 	</div>
 </template>
