--- a/imports/modules/iberian_gauge/game.html
+++ b/imports/modules/iberian_gauge/game.html
@@ -45,11 +45,22 @@
 					<option value="36">36</option>
 				</select>
 			</div>
+			<div id="ui_sr_invest">
+				<input type="hidden" id="invest_player"/>
+				<span id="invest_player_display"></span>
+				<button id="invest_run">buys a share</button>
+				in
+				<select id="invest_company"></select>
+			</div>
 			<div id="ui_sr_pass">
 				<input type="hidden" id="stock_pass_player"/>
 				<span id="stock_pass_player_display"></span>
 				<button id="stock_pass_run">passes</button>
 			</div>
+		</div>
+
+		<div id="ui_operating_rounds">
+			operating round ui goes here
 		</div>
 	</div>
 </template>
