basic undo working
fails on auto ops at the moment...

--- a/client/ui/SiteNav.html
+++ b/client/ui/SiteNav.html
@@ -1,7 +1,7 @@
 <template name="siteTopNavBar">
 	<div class="top_nav">
 		<a href="/">Conductor</a>
-		| undo | refresh | etc.
+		| <span id="undo"><a href="">undo</a></span> | refresh | etc.
 		<span id="context_id_display">{{contextId}}</span>
 	</div>
 </template>
