add colors to player name displays; in prep for share display

--- a/imports/modules/iberian_gauge/game.html
+++ b/imports/modules/iberian_gauge/game.html
@@ -33,7 +33,7 @@
 				<select id="float_player"></select>
 				-->
 				<input type="hidden" id="float_player"/>
-				<span id="float_player_display"></span>
+				<span class="playerName" id="float_player_display"></span>
 				<button id="float_run">floats</button>
 				<select id="float_company"></select>
 				at
